--- a/bowling.html
+++ b/bowling.html
@@ -50,22 +50,17 @@
     <div id="slider1" class="carousel slide mb-5" data-ride="carousel">
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img style="width: 200px;" class="d-block img-fluid" src="testimonials/wills.jpeg." alt="First Slide">
+              <img style="width: 200px;" class="d-block img-fluid" src="https://mail.google.com/mail/u/0/?ui=2&ik=12cec4c1f3&view=fimg&th=164ccfce367f2b5b&attid=0.1&disp=inline&realattid=e5ec9de7cc1a9614_0.1&safe=1&attbid=ANGjdJ_0tSe5cutGc3epKThMn_W-ci9RIzAx1KQUaVV3czEjFlo3vq1Gk7LJ2Qrr678BwUqyzp-Vwn_2LHxrF_xnQ016LS_RxD-g5mIKbTQQGsfj2XglPs-8pN96ysQ&ats=1532523138630&rm=164ccfce367f2b5b&zw&sz=w1366-h654" alt="wills">
               <p style="text-align:inital; width: 200px;">“As someone who is consistently nose down in my work, the bowling alley is a great outlet for the workplace.  It brings an opportunity to step away from my desk and really clear my headspace.  Bowling also allows for a little athletic competition for people of all backgrounds and fitness levels.” – Will S.
               </p>
             </div>
             <div class="carousel-item">
-              <img style="width: 200px;" class="d-block img-fluid" src="" alt="Second Slide">
+              <img style="width: 200px;" class="d-block img-fluid" src="https://mail.google.com/mail/u/0/?ui=2&ik=12cec4c1f3&view=fimg&th=164ccfce367f2b5b&attid=0.2&disp=inline&realattid=e5ec9de7cc1a9614_0.2&safe=1&attbid=ANGjdJ8OyTHjpT6gab1_BFTBveYz9QUbNU4_t6YMRdY9NTmkU9PBsINRKrpO1VVX2KWiRf8pI0XJXIOrWI2_KqWferTYI950G6LRAfCMUeyYrRpsKqasEm5KhTe8UKQ&ats=1532523138630&rm=164ccfce367f2b5b&zw&sz=w1366-h654" alt="craig">
               <p style="text-align:inital; width: 200px;">“There is no greater feeling than stepping onto the lane and rolling a strike, talk about stress relief!” – Craig M.</p>
             </div>
             <div class="carousel-item">
-              <img style="width: 200px;" class="d-block img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNhou-SGxX-vWpPuBTo-_sanjTtNgq-4BxJmQWUGgG8-xkjGde" alt="Third Slide">
+              <img style="width: 200px;" class="d-block img-fluid" src="https://mail.google.com/mail/u/0/?ui=2&ik=12cec4c1f3&view=fimg&th=164ccfce367f2b5b&attid=0.3&disp=inline&realattid=e5ec9de7cc1a9614_0.3&safe=1&attbid=ANGjdJ_OVtUA4Bm4snWBUA0c5yM-GPpwnuCcFWarmglTIBaIBG0CiTToDjwyGOM5CX7aC1WGRy_GUB5TQ6oKOT-Zt9IvxPOIU9kjmrDOWZDt4Rgn5BFBOVHq2vbABFk&ats=1532523138630&rm=164ccfce367f2b5b&zw&sz=w1366-h654" alt="Tyler">
               <p style="text-align:inital; width: 200px;">“It’s pretty amazing to have a 2-lane bowling alley in your own office building! I can’t think of any other company who would have something like this…maybe Google? I think that says a lot about our “work hard play hard” philosophy here at Turn5! – Tyler D.</p>
-            </div>
-
-            <div class="carousel-item">
-              <img style="width: 200px;" class="d-block img-fluid" src="http://westsidetoastmasters.com/resources/book_of_body_language/images/075-obama_tight_smile.jpg" alt="Fourth Slide">
-              <p style="text-align:inital; width: 200px;">That moment when you finally learn how to curve the ball </p>
             </div>
           </div>
       </div>
