--- a/bowling.html
+++ b/bowling.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">    
->>>>>>> e41e29eea4d098fa208f31b71fd91b226880794f
 <link rel="stylesheet" href="bowling.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <title>CSS Template</title>
@@ -50,7 +49,7 @@
     <div id="slider1" class="carousel slide mb-5" data-ride="carousel">
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img style="width: 200px;" class="d-block img-fluid" src="testimonials/wills.jpeg." alt="First Slide">
+              <img style="width: 200px;" class="d-block img-fluid" src="/testimonials/wills.jpeg." alt="First Slide">
               <p style="text-align:inital; width: 200px;">“As someone who is consistently nose down in my work, the bowling alley is a great outlet for the workplace.  It brings an opportunity to step away from my desk and really clear my headspace.  Bowling also allows for a little athletic competition for people of all backgrounds and fitness levels.” – Will S.
               </p>
             </div>
@@ -63,9 +62,7 @@
               <p style="text-align:inital; width: 200px;">“It’s pretty amazing to have a 2-lane bowling alley in your own office building! I can’t think of any other company who would have something like this…maybe Google? I think that says a lot about our “work hard play hard” philosophy here at Turn5! – Tyler D.</p>
             </div>
 
-            <div class="carousel-item">
-              <img style="width: 200px;" class="d-block img-fluid" src="http://westsidetoastmasters.com/resources/book_of_body_language/images/075-obama_tight_smile.jpg" alt="Fourth Slide">
-              <p style="text-align:inital; width: 200px;">That moment when you finally learn how to curve the ball </p>
+            <div class="carousel-i
             </div>
           </div>
       </div>
@@ -80,4 +77,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>   
 </body>
+
 </html>
