added rest of numbers and placed them

--- a/bowling.html
+++ b/bowling.html
@@ -41,7 +41,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-6 nested">3</div>
+                <div class="col-6 nested">
+                <img src="numberpics/three.png" alt="numberthreecircle" id="three">
+                </div>
                 <div class="col-6 nested">
                     <h2>Pick a Team Name</h2>
                     <form id="namepicker">
@@ -51,6 +53,7 @@
                     <form id="namepicker">
                         <input type="text" name="namepicker">
                     </form>
+                    <img src="numberpics/four.png" alt="numberfourcircle" id="four">
                 </div>
             </div>
             <div class="row">
