--- a/bowling.html
+++ b/bowling.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">    
 <link rel="stylesheet" href="bowling.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-<title>CSS Template</title>
+<title>Turn5 Bowling</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -15,7 +15,7 @@
 	</div>
 	<div class="row">
 		<div class="col-9 white">
-            <div class="row">
+            <div class="row justify-content-center">
                 <h1 id="res">Reserve Your Lane</h1>
             </div>
             <div class="row">
@@ -25,18 +25,56 @@
                 <div class="col-md-6 nested">
                     <h2>Pick A Time</h2>
                     <form id="timepicker">
-                        <input type="radio" name="time" value="1-2a"> 8:00am - 9:00am<br>
-                        <input type="radio" name="time" value="1-2a"> 9:00am - 10:00am<br>
-                        <input type="radio" name="time" value="1-2a"> 10:00am - 11:00am<br>
-                        <input type="radio" name="time" value="1-2a"> 11:00am - 12:00pm<br>
-                        <input type="radio" name="time" value="1-2a"> 12:00pm - 1:00pm<br>
-                        <input type="radio" name="time" value="1-2a"> 2:00pm - 3:00pm<br>
-                        <input type="radio" name="time" value="1-2a"> 3:00pm - 4:00pm<br>
-                        <input type="radio" name="time" value="1-2a"> 4:00pm - 5:00pm<br>
-                        <input type="radio" name="time" value="1-2a"> 5:00pm - 6:00pm<br>
-                        <input type="radio" name="time" value="1-2a"> 6:00pm - 7:00pm<br>
-                        <input type="radio" name="time" value="1-2a"> 7:00pm - 8:00pm<br>
+                        <div>
+                            <input type="radio" id="8-9" name="drone"  />
+                            <label for="8-9">8:00AM - 9:00AM</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="9-10" name="drone" />
+                            <label for="9-10">9:00AM - 10:00AM</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="10-11" name="drone" />
+                            <label for="10-11">10:00AM - 11:00AM</label>
+                        </div>                                        
+                        <div>
+                            <input type="radio" id="11-12" name="drone" />
+                            <label for="11-12">11:00AM - 12:00PM</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="12-11" name="drone" />
+                            <label for="12-11">12:00PM - 11:00PM</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="1-2" name="drone" />
+                            <label for="1-2">1:00PM - 2:00PM</label>
+                        </div>  
+                        <div>
+                            <input type="radio" id="2-3" name="drone" />
+                            <label for="2-3">2:00PM - 3:00PM</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="3-4" name="drone" />
+                            <label for="3-4">3:00PM - 4:00PM</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="4-5" name="drone" />
+                            <label for="4-5">4:00PM - 5:00PM</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="5-6" name="drone" />
+                            <label for="5-6">5:00PM - 6:00PM</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="6-7" name="drone" />
+                            <label for="6-7">6:00PM - 7:00PM</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="7-8" name="drone" />
+                            <label for="7-8">7:00PM - 8:00PM</label>
+                        </div>
                     </form>
+                    
                     <img src="numberpics/two.png" alt="numbertwocircle" id="two">
                 </div>
             </div>
@@ -56,8 +94,8 @@
                     <img src="numberpics/four.png" alt="numberfourcircle" id="four">
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
+            <div class="row justify-content-center">
+                <div class="col-1">
                     <form id="submitbutton">
                         <input type="submit">
                     </form>   
@@ -67,19 +105,19 @@
 		<div class="col-lg-3 col-md-3 col-sm-0 col-xs-0 orange">
         `    <div id="testimonials">
                 <h2>Employee Testimonials</h2>
-                <div id="slider1" class="carousel slide carousel-fade" data-ride="carousel">
-                    <div class="carousel-inner" role="listbox">
+                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-ride="carousel">
+                    <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img style="width: 200px;" class="d-block img-fluid" src="testimonials/wills.jpeg" alt="wills">
-                            <p style="text-align:inital; width: 200px;">“As someone who is consistently nose down in my work, the bowling alley is a great outlet for the workplace.  It brings an opportunity to step away from my desk and really clear my headspace.  Bowling also allows for a little athletic competition for people of all backgrounds and fitness levels.” – Will S.</p>
+                            <img class="d-block w-100" src="testimonials/wills.jpeg" alt="First slide">
+                            <p style="width: 100%;">“As someone who is consistently nose down in my work, the bowling alley is a great outlet for the workplace.  It brings an opportunity to step away from my desk and really clear my headspace.  Bowling also allows for a little athletic competition for people of all backgrounds and fitness levels.” – Will S.</p>
                         </div>
                         <div class="carousel-item">
-                            <img style="width: 200px;" class="d-block img-fluid" src="testimonials/craigm.jpg" alt="craig">
-                            <p style="text-align:inital; width: 200px;">“There is no greater feeling than stepping onto the lane and rolling a strike, talk about stress relief!” – Craig M.</p>
+                            <img class="d-block w-100" src="testimonials/craigm.jpg" alt="Second slide">
+                            <p style="width: 100%;">“There is no greater feeling than stepping onto the lane and rolling a strike, talk about stress relief!” – Craig M.</p>  
                         </div>
                         <div class="carousel-item">
-                            <img style="width: 200px;" class="d-block img-fluid" src="testimonials/Tylerd.jpeg" alt="Tyler">
-                            <p style="text-align:inital; width: 200px;">“It’s pretty amazing to have a 2-lane bowling alley in your own office building! I can’t think of any other company who would have something like this…maybe Google? I think that says a lot about our “work hard play hard” philosophy here at Turn5! – Tyler D.</p>
+                            <img class="d-block w-100" src="testimonials/Tylerd.jpeg" alt="Third slide">
+                            <p style="width: 100%;">“It’s pretty amazing to have a 2-lane bowling alley in your own office building! I can’t think of any other company who would have something like this…maybe Google? I think that says a lot about our “work hard play hard” philosophy here at Turn5! – Tyler D.</p>  
                         </div>
                     </div>
                 </div>
