--- a/bowling.html
+++ b/bowling.html
@@ -11,7 +11,36 @@
 <body>
     <div class="container-fluid">
 	<div class="row">
-		<div class="col black"></div>
+		<div class="col black">
+		<div class="row justify-content-center">
+			 <div class="col-lg-12 col-md-8 col-sm-4 "> 
+            
+                 <div id="slider1" class="carousel slide mb-5" data-ride="carousel">
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <img style= "height: 350px; width: 200%;" class="d-block img-fluid" src="images/TURN5_BOWLING_ALLEY.jpg" alt="First Slide">
+                <p style="text-align:center; width: px;"></p>
+            </div>
+
+              
+            <div class="carousel-item">
+              <img style="height: 350px; width: 200%;" class="d-block img-fluid" src="images/grand_opening_198.jpg" alt="Second Slide">
+                <p style="text-align:inital; width: 200px;"> </p>
+            </div>
+            <div class="carousel-item">
+              <img style="height: 350px; width: 200%;" class="d-block img-fluid" src="images/TURN5_BOWLING_ALLEY_3.jpg" alt="Third Slide">
+                <p style="text-align:inital; width: 200px;"> </p>
+            </div>
+
+            <div class="carousel-item">
+              <img style="height: 350px; width: 200%;" class="d-block img-fluid" src="images/20180103_CedarHallow_056.jpg" alt="Fourth Slide">
+                <p style="text-align:inital; width: 200px;"> </p>
+              </div> </div>
+            <h1>Turn 5 Bowling</h1>         
+        </div>
+           </div>
+        </div>
+		</div>
 	</div>
 	<div class="row">
 		<div class="col-9 white">
