Added 'Select a Date' and 'Select a Lane' inputs

--- a/bowling.html
+++ b/bowling.html
@@ -50,6 +50,12 @@
             <div class="row">
                 <div class="col-md-6 nested">
                     <img src="numberpics/one.png" alt="numberonecircle" id="one">
+			<h2>Pick a date: </h2>
+			
+                            <form>
+                                <input type="date" id='datepicker'/>
+			</form>
+                </div>
                 </div>    
                 <div class="col-md-6 nested">
                     <h2>Pick A Time</h2>
@@ -110,6 +116,43 @@
             <div class="row">
                 <div class="col-6 nested">
                 <img src="numberpics/three.png" alt="numberthreecircle" id="three">
+			<h2>Pick your Lane(s): </h2>
+                    <div class='container'>    
+                       
+                           <div class='row' id='laneIcon'>
+                                <div class='col-md-2'>
+                                    <div class='ballContainer'>
+                                        <img src='Turn5 SelectaLane1.png' width='40px' height='40px'>
+                                    </div>
+                                </div>
+
+                                <div class='col-md-2'>
+                                    <div class='ballContainer'>
+                                        <img src='Turn5 SelectaLane2.png' width='40px' height='40px' margin='5px'>
+                                    </div>
+                                </div>
+                            </div>
+                            <br>
+
+                            <div id='laneInput' class='row'>
+
+                                <div class='col-md-2'>
+                                    <label class="container">Lane One 
+                                      <input type="checkbox" checked="checked">
+                                      <span class="checkmark"></span>
+                                    </label>
+                                </div>
+
+                                <div class='col-md-2'>
+                                    <label class="container" >Lane Two
+                                      <input type="checkbox">
+                                      <span class="checkmark"></span>
+                                    </label>
+                                </div>
+
+                                </div>
+
+                            </div>
                 </div>
                 <div class="col-6 nested">
                     <h2>Pick a Team Name</h2>
