added bowling ball images and moved things around in css

--- a/bowling.html
+++ b/bowling.html
@@ -134,13 +134,13 @@
                            <div class='row' id='laneIcon'>
                                 <div class='col-md-2'>
                                     <div class='ballContainer'>
-                                        <img src='Turn5 SelectaLane1.png' width='40px' height='40px'>
+                                        <img src='numberpics/Turn5SelectaLane1.png' width='40px' height='40px'>
                                     </div>
                                 </div>
 
-                                <div class='col-md-2'>
+                                <div class='col-md-2' id="ball2">
                                     <div class='ballContainer'>
-                                        <img src='Turn5 SelectaLane2.png' width='40px' height='40px' margin='5px'>
+                                        <img src='numberpics/Turn5SelectaLane2.png' width='40px' height='40px' margin='5px'>
                                     </div>
                                 </div>
                             </div>
@@ -148,14 +148,14 @@
 
                             <div id='laneInput' class='row'>
 
-                                <div class='col-md-2'>
+                                <div class='col-md-2' >
                                     <label class="container">Lane One 
                                       <input type="checkbox" checked="checked">
                                       <span class="checkmark"></span>
                                     </label>
                                 </div>
 
-                                <div class='col-md-2'>
+                                <div class='col-md-2' id="lanetwo">
                                     <label class="container" >Lane Two
                                       <input type="checkbox">
                                       <span class="checkmark"></span>
