changed numbers and made change a lane responsive

--- a/bowling.html
+++ b/bowling.html
@@ -29,8 +29,8 @@
             <div class="row">
 <!--                 STEP ONE PICK A DATE -->
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nested">
-                    <img src="numberpics/one.png" alt="numberonecircle" id="one">
-			        <h2> Pick a date: </h2>
+<!--                     <img src="numberpics/one.png" alt="numberonecircle" id="one"> -->
+			        <h2> 1. Pick a date: </h2>
 		                <div class="flex-container">
                             <form>
                                 <input class="box" type="date" id='datepicker'/>
@@ -40,7 +40,7 @@
 <!--                 STEP TWO PICK A TIME -->
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nested">
                     
-                    <h2>Pick A Time</h2>
+                    <h2>2. Pick A Time</h2>
                     <div class="flex-container">
                     <form id="timepicker">
                         <div>
@@ -93,25 +93,25 @@
                         </div>
                     </form>
                     </div>
-                    <img src="numberpics/two.png" alt="numbertwocircle" id="two">
+<!--                     <img src="numberpics/two.png" alt="numbertwocircle" id="two"> -->
                 </div>
             </div>
 <!--             BOTTOM ROW WITH STEPS THREE AND FOUR -->
             <div class="row">
 <!--                 STEP 3 -->
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nested">
-                <img src="numberpics/three.png" alt="numberthreecircle" id="three">
-			<h2>Pick your Lane(s): </h2>
+<!--                 <img src="numberpics/three.png" alt="numberthreecircle" id="three"> -->
+			<h2>3. Pick your Lane(s): </h2>
                     <div class='container'>    
                        
                            <div class='row' id='laneIcon'>
-                                <div class='col-md-2'>
+                                <div class='col-6'>
                                     <div class='ballContainer'>
                                         <img src='numberpics/Turn5SelectaLane1.png' width='40px' height='40px'>
                                     </div>
                                 </div>
 
-                                <div class='col-md-2' id="ball2">
+                                <div class='col-6' id="ball2">
                                     <div class='ballContainer'>
                                         <img src='numberpics/Turn5SelectaLane2.png' width='40px' height='40px' margin='5px'>
                                     </div>
@@ -121,14 +121,14 @@
 
                             <div id='laneInput' class='row'>
 
-                                <div class='col-md-2' >
-                                    <label class="container">Lane One 
+                                <div class='col-6' id="laneone">
+                                    <label class="container" >Lane One 
                                       <input type="checkbox" checked="checked">
                                       <span class="checkmark"></span>
                                     </label>
                                 </div>
 
-                                <div class='col-md-2' id="lanetwo">
+                                <div class='col-6' id="lanetwo">
                                     <label class="container" >Lane Two
                                       <input type="checkbox">
                                       <span class="checkmark"></span>
@@ -136,12 +136,11 @@
                                 </div>
 
                                 </div>
-
-                            </div>
+                    </div>
                 </div>
 <!--                 STEP FOUR -->
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nested">
-                    <h2>Pick a Team Name</h2>
+                    <h2>4. Pick a Team Name</h2>
                     <div class="flex-container">
                     <form id="namepicker">
                         <input type="text" name="namepicker">
@@ -153,7 +152,7 @@
                         <input type="text" name="namepicker">
                     </form>
                     </div>
-                    <img src="numberpics/four.png" alt="numberfourcircle" id="four">
+<!--                     <img src="numberpics/four.png" alt="numberfourcircle" id="four"> -->
                 </div>
             </div>
             <div class="row justify-content-center">
