deleted usless insignificant waste of space colons

--- a/bowling.html
+++ b/bowling.html
@@ -68,7 +68,7 @@
 <!--                 STEP ONE PICK A DATE -->
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nested">
 <!--                     <img src="numberpics/one.png" alt="numberonecircle" id="one"> -->
-			        <h2> 1. Pick a date: </h2>
+			        <h2> 1. Pick a date </h2>
 		                <div class="flex-container">
                             <form>
                                 <input class="box" type="date" id='datepicker'/>
@@ -139,7 +139,7 @@
 <!--                 STEP 3 -->
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nested">
 <!--                 <img src="numberpics/three.png" alt="numberthreecircle" id="three"> -->
-			<h2>3. Pick your Lane(s): </h2>
+			<h2>3. Pick your Lane(s) </h2>
                     <div class='container'>    
                        
                            <div class='row' id='laneIcon'>
