fixed the header carousel (including white strip on the right side caused by it) and words underneath. Made both responsive

--- a/bowling.html
+++ b/bowling.html
@@ -15,38 +15,42 @@
 	<div class="row">
 		<div class="col black">
 <!--             andres stuff under this -->
-
-            <div class="col-lg-11 col-md-11 col-sm-10 col-xs-1">
-
-                    <div id="slider1" class="carousel slide mb-5" data-ride="carousel">
-                        <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active">
-                                <img style="height: 350px; width: 200%;" class="d-block img-fluid img-responsive" src="images/TURN5_BOWLING_ALLEY.jpg" alt="First Slide">
-                                <p style="text-align:center; width: px;"></p>
-                            </div>
-                            <div class="carousel-item">
-                                <img style="height: 350px; width: 200%;" class="d-block img-fluid img-responsive" src="images/grand_opening_198.jpg" alt="Second Slide">
-                                <p style="text-align:inital; width: 200px;"></p>
-                            </div>
-                            <div class="carousel-item">
-                                <img style="height: 350px; width: 200%;" class="d-block img-fluid img-responsive" src="images/TURN5_BOWLING_ALLEY_3.jpg" alt="Third Slide">
-                                <p style="text-align:inital; width: 200px;"></p>
-                            </div>
-
-                            <div class="carousel-item">
-                                <img style="height: 350px; width: 200%;" class="d-block img-fluid img-responsive" src="images/20180103_CedarHallow_056.jpg" alt="Fourth Slide">
-                                <p style="text-align:inital; width: 200px;"></p>
+        <div id=headslider>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div id="headercarousel" class="carousel slide carousel-fade" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="images/20180103_CedarHallow_056.jpg" alt="First slide" id="firstslide">
+                            <div class="carousel-caption">
+                                <h3>Turn5 Bowling Alley</h3>
                             </div>
                         </div>
-                        <h4>Turn 5 Bowling</h4> 
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/grand_opening_198.jpg" alt="Second slide" id="secondslide">
+                            <div class="carousel-caption">
+                                <h3>Turn5 Bowling Alley</h3>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/TURN5_BOWLING_ALLEY.jpg" alt="Third slide" id="thirdslide">
+                            <div class="carousel-caption">
+                                <h3>Turn5 Bowling Alley</h3>
+                            </div>
+                        </div>
+                         <div class="carousel-item">
+                            <img class="d-block w-100" src="images/TURN5_BOWLING_ALLEY_3.jpg" alt="Third slide" id="fourthslide">
+                             <div class="carousel-caption">
+                                <h3>Turn5 Bowling Alley</h3>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              
             </div>
-        
+        </div>
         <div class="container" id="msg">
             <div class="row">
                 <div class="message">
-                    <div class="col lg 8 col-md 4 col-sm 7">        
+                    <div class="col-lg-12 col-md-12 col-sm-12">        
                         <p>Welcome to Turn5 Bowling Alley where you can have an enjoyable time with your co-workers. Here you can choose a lane and compete with each other. Always make sure to have a good time.</p>
                     </div>
                 </div>
