fixed spacing between submit button and bottom footer

--- a/bowling.html
+++ b/bowling.html
@@ -198,7 +198,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-1">
+                <div class="col-1 submitrow">
                     <form id="submitbutton">
                         <input type="submit">
                     </form>   
