--- a/bowling.html
+++ b/bowling.html
@@ -24,6 +24,10 @@
                             <div class="carousel-caption">
                                 <h3>Turn5 Bowling Alley</h3>
                             </div>
+                            <div class="carousel-caption">        
+                                <p>Welcome to the Turn5 Bowling Alley! Stressed out from work or looking to unwind? Go bowling! To reserve a lane, simply fill out the form below and you're all set to bowl. Work can be stressful, but bowling isn't, so gather a few of your coworkers and come have some fun!</p>
+                            </div>
+
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="images/grand_opening_198.jpg" alt="Second slide" id="secondslide">
@@ -77,7 +81,7 @@
 
 		                <div class="flex-container">
                             <form>
-                                <input class="box" type="date" id='datepicker'/>
+                                <input class="form-control" type="date" id='datepicker'/>
 			                </form>
                         </div>
                 </div>
@@ -171,14 +175,14 @@
                                 <div class='col-6' id="laneone" display='block'>
 
                                     <label class="container" >Lane One 
-                                      <input type="checkbox" checked="checked">
+                                      <input type="checkbox" checked="checked" class='form-control'>
                                       <span class="checkmark"></span>
                                     </label>
                                 </div>
 
                                 <div class='col-6' id="lanetwo">
                                     <label class="container" >Lane Two
-                                      <input type="checkbox">
+                                      <input type="checkbox" class='form-control'>
                                       <span class="checkmark"></span>
                                     </label>
                                 </div>
@@ -191,13 +195,13 @@
                     <h2>4. Pick a Team Name</h2>
                     <div class="flex-container">
                     <form id="namepicker">
-                        <input type="text" name="namepicker">
+                        <input type="text" name="namepicker" class='form-control'>
                     </form>
                     </div>    
                     <br>
                     <div class="flex-container">
                     <form id="namepicker">
-                        <input type="text" name="namepicker">
+                        <input type="text" name="namepicker" class='form-control'>
                     </form>
                     </div>
 <!--                     <img src="numberpics/four.png" alt="numberfourcircle" id="four"> -->
@@ -206,7 +210,7 @@
             <div class="row justify-content-center">
                 <div class="col-1 submitrow">
                     <form id="submitbutton">
-                        <input type="submit">
+                        <input type="submit" class='form-control'>
                     </form>   
                 </div>    
             </div>
