removed pick your lane in order to change it and set a set time on the testimonials switching

--- a/bowling.html
+++ b/bowling.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">    
 <link rel="stylesheet" href="bowling.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    
 <title>Turn5 Bowling</title>
 </head>
 <body>
@@ -148,7 +150,7 @@
 
 			<h2>3. Pick your Lane(s) </h2>
 
-                    <div class='container'>    
+<!--                     <div class='container'>    
                        
                            <div class='row' id='laneIcon'>
                                 <div class='col-6'>
@@ -184,7 +186,7 @@
                                 </div>
 
                                 </div>
-                    </div>
+                    </div> -->
                 </div>
 <!--                 STEP FOUR -->
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nested">
@@ -219,7 +221,7 @@
             </div>
             <div class="row">       
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 nested">
-                    <div id="carouselpeople" class="carousel slide carousel-fade" data-ride="carousel">
+                    <div id="carouselpeople" class="carousel slide carousel-fade" data-ride="carousel" data-interval="10000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="testimonials/wills.jpeg" alt="First slide">
@@ -237,7 +239,7 @@
                 </div>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 nested">
-                    <div id="carouselwords" class="carousel slide carousel-fade" data-ride="carousel">
+                    <div id="carouselwords" class="carousel slide carousel-fade" data-ride="carousel" data-interval="10000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
 <!--                                 <img class="d-block w-100" src="testimonials/wills.jpeg" alt="First slide"> -->
